tests/snapshots/tests__command__disable_help_subcommand.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_5c7f48ec'
[1m[31merror:[0m unrecognized subcommand '[33mhelp[0m'

[1m[4mUsage:[0m [1mmyprog[0m [COMMAND]

For more information, try '[1m--help[0m'.
EOF_5c7f48ec
exit 1
