tests/snapshots/tests__command__dont_delimit_trailing_values.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cmd='foo'
claptrap_rest=('arg1,arg2,arg3')
