tests/snapshots/tests__command__groups.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_major='1'
claptrap_iface='eth0'
